# fraud-detection-mlops-platform

./: .gitignore  LICENSE  README.md  docker-compose.yml  sonar-project.properties
backend/: Dockerfile  alembic.ini  check_datasets.py  check_models.py  debug.py  pyproject.toml  pytest2_results.txt  pytest3_results.txt  pytest_results.txt  query_db.py  query_features_error.py  requirements.txt  test_api.py  test_db.py  test_db_sa.py  test_fastapi_client.py  test_lifespan.py  test_login_api.py  test_login_api_ipv4.py  test_models.py  test_out.txt  tmp_out.txt  tmp_query.py
backend/alembic/: env.py
backend/alembic/versions/: 20260117_001_initial_schema.py  20260203_001_add_hierarchical_storage_support.py  20260205_001_add_hyperparameter_presets.py  20260211_001_add_tuning_fields.py  20260213_001_add_registry_support.py  20260225_0739_589200d4f988_add_alerts_table.py  20260303_0724_3c17b76603d0_alert_schema_update.py  20260305_1205_b3a4f6d89a12_add_dataset_lineage_table.py  20260306_0711_d88a8ed8de51_add_inference_logs_table.py  20260323_0740_8b5a6c288c49_add_user_table.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  database_sync.py  dependencies.py  naming.py  rate_limit.py  security.py  storage.py  time.py
backend/app/models/: __init__.py  alert.py  classification_model.py  dataset.py  dataset_lineage.py  feature_set.py  inference_log.py  (+4 more)
backend/ml/: __init__.py
backend/scripts/: check_new_dataset.py  check_row_count.py  create_admin.py  debug_datasets.py  debug_slack.py  fix_enum_direct.py  migrate_alert_enum.py  verify_csv.py
backend/tests/: conftest.py  test_alert.py  test_column_role_detector.py  test_dashboard_stats.py  test_data_processing_validation.py  test_drift_bias_alerts.py  test_feature_metadata.py  test_fraud_feature_engineer.py  test_live_alert.py  test_training_notification.py
(+157 files in other folders)
