[tool.poetry]
name = "shadow-hubble-backend"
version = "0.1.0"
description = "Fraud Detection MLOps Platform API"
authors = ["Shadow Hubble Team"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
alembic = "^1.18.0"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.9"
# adjusted redis version to be compatible with celery/kombu
redis = ">=4.5.5,<6.5"
celery = {extras = ["redis"], version = "^5.6.0"}
azure-storage-blob = "^12.28.0"
azure-identity = "^1.25.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
httpx = "^0.28.0"
python-multipart = "^0.0.22"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
watchdog = "^4.0.0"
wheel = "^0.46.2"
jaraco-context = "^6.1.0"

# ML dependencies
scikit-learn = "^1.8.0"
scikit-optimize = "^0.10.1"
xgboost = "^3.1.0"
lightgbm = "^4.6.0"
pandas = "^2.1.4"
numpy = "^1.26.4"
shap = "^0.44.0"
evidently = "^0.4.0"
fairlearn = "^0.10.0"
onnxruntime = "^1.16.0"
onnxmltools = "^1.12.0"
skl2onnx = "^1.16.0"
pyarrow = "^18.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
